Switch to webview for running parser.js
This removes the need to include v8 in the apk, saving approx 8MB.
Support for ConvertAction and API17 still pending.

--- a/app/src/debug/res/values/bools.xml
+++ b/app/src/debug/res/values/bools.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <bool name="enableStethoConsole">true</bool>
+    <bool name="enableStethoConsole">false</bool>
 </resources>
